REGRESSION (r128837): mathml/presentation/subsup.xhtml became flaky https://bugs.webkit.org/show_bug.cgi?id=97390

Reviewed by Ojan Vafai.

Source/WebCore:

In a RenderMathMLSubSup, we need to set the base's wrapper's style so that baseHeight
in layout() will be the base's true height, without any flexbox stretching.

Tested by existing tests.

* rendering/mathml/RenderMathMLSubSup.cpp:
(WebCore::RenderMathMLSubSup::fixAnonymousStyles):
(WebCore::RenderMathMLSubSup::addChild):
(WebCore::RenderMathMLSubSup::styleDidChange):
* rendering/mathml/RenderMathMLSubSup.h:
(RenderMathMLSubSup):

LayoutTests:

* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/119082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133221 268f45cc-cd09-0410-ab3c-d52691b4dbfc